# traefik-to-unifi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  runner.py
.github/workflows/: ci.yml  docker-publish.yml
tests/: __init__.py  conftest.py  test_app.py  test_init.py  test_integration.py
traefiktounifi/: __init__.py  app.py  runner.py
