[tool.poetry]
name = "traefiktounifi"
version = "0.1.0"
description = ""
authors = ["Thomas Lomas <tlomas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
schedule = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
